# serverpeek

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  go.mod  main.go  pyproject.toml  wheel.json
docs/: docinfo.json  mkdocs.yml
docs/mkdocs/: index.md  licence.md  usage.md
internal/: cli.go  server.go  sysinfo.go  sysinfo_darwin.go  sysinfo_linux.go  sysinfo_windows.go
internal/static/: index.html
serverpeek/: __init__.py  __main__.py  argbuilder.py  cli.py  server.py  system_info.py
web_proc_info_server/: __init__.py  __main__.py  cli.py  server.py
web_proc_info_server/web/: index.html
